--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,17 +8,24 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "antd": "^5.27.1",
     "axios": "^1.6.2",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.8.0",
-    "typescript": "^4.9.5"
+    "resolve-url-loader": "^5.0.0",
+    "svgo": "^4.0.0",
+    "typescript": "^4.9.5",
+    "webpack-dev-server": "^5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,5 +51,12 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "overrides": {
+    "nth-check": "^2.1.1",
+    "postcss": "^8.5.6",
+    "webpack-dev-server": "^5.2.2",
+    "svgo": "^4.0.0",
+    "css-select": "^5.1.0"
+  }
 }
